# GenAIExamples

./: .Request.py  .Triage.py  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .set_env.sh  .shellcheckrc  .trivyignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL_INFORMATION.md  LICENSE_HEADER_PYTHON.txt  README-deploy-benchmark.md  README.md  SECURITY.md  base_image_CVE.json  benchmark.py  benchmark.yaml  benchmark_requirements.txt  codecov.yml  deploy.py  deploy_and_benchmark.py  docker_images_list.md  opea_release_data.md  pyproject.toml  requirements.txt  setup.py  supported_examples.md  third-party-programs.txt  validated_configurations.md  version.txt
GraphRAG/standalone/: .tool-versions  README.md  docker-compose.yml  env-example  pyproject.toml
cogniware-opea-ims/: .gitignore  ALL_UPDATES_COMPLETE.md  CHANGELOG.md  CHANGES_SUMMARY.md  CHAT_INTERFACE_COMPLETE.md  CMakeLists.txt  CODE_IDE_AUTO_GENERATION.md  CODE_IDE_WITH_MCP.md  COMPLETE_PLATFORM_GUIDE.md  CONTRIBUTING.md  DATABASE_AND_NAV_UPDATE.md  DATA_SETUP.md  DATA_SOURCE_UPDATE.md  DEBUGGING_INSTRUCTIONS.md  DEFAULT_CREDENTIALS.md  DEPLOYMENT_GUIDE.md  DOCUMENT_ANALYSIS_CREDENTIALS.md  DOCUMENT_ANALYSIS_FIX.md  EXPLORER_FIX_GUIDE.md  FINAL_PACKAGE_VERIFICATION.md  FINAL_PLATFORM_SUMMARY.md  FINAL_SUBMISSION_CHECKLIST.md  FIXES_APPLIED.md  HOW_TO_SUBMIT_TO_OPEA.md  HTTPS_DEPLOYMENT_COMPLETE.md  ITERATIVE_GENERATION_GUIDE.md  LLM_COUNT_FIX.md  LOGIN_FIX_APPLIED.md  OPEA_COMPLIANCE_SUMMARY.md  PACKAGE_INFO.md  PACKAGE_SUMMARY.txt  PLATFORM_COMPLETE.md  PLATFORM_DEPLOYED_READY.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  PRODUCTION_DOCUMENT_PROCESSING.md  PR_COMMENT_RESPONSE.md  PR_REVIEW_RESPONSE.md  QUICK_REFERENCE.md  QUICK_START_CHAT.md  README.md  (+26 more)
cogniware-opea-ims/api/: Cogniware-Business-API.postman_collection.json  Cogniware-Core-API.postman_collection.json  Cogniware-Parallel-LLM-API.postman_collection.json  openapi.yaml
cogniware-opea-ims/assets/: README.md
cogniware-opea-ims/backend/: Dockerfile  requirements.txt
cogniware-opea-ims/build_simple/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cogniware-opea-ims/build_simple_engine/: CMakeCache.txt  Makefile  cmake_install.cmake  libsimple_engine.so.1.0.0  simple_engine_test
cogniware-opea-ims/cmake/: FindCUDNN.cmake  FindJsonCpp.cmake  FindNumPy.cmake  FindSpdlog.cmake  FindTorch.cmake
cogniware-opea-ims/data/: 10 Gigabit Ethernet MAC_spec.csv  1000W Power Supply Module AXXPSU_ordering.csv  1000W Power Supply Module AXXPSU_spec.csv  100G-25G Fracturable Reed Solomon_spec.csv  100GEUMACPHY IP with FEC Option_spec.csv  10GBASE-KR PHY_spec.csv  10GBase-R PHY_spec.csv  10GbE Intel┬« Ethernet Network Adapter E610.csv  10Gbps Ethernet MAC with 1588_spec.csv  10th Generation Intel┬« CoreΓäó i3 Processors.csv  10th Generation Intel┬« CoreΓäó i5 Processors.csv  10th Generation Intel┬« CoreΓäó i7 Processors.csv  10th Generation Intel┬« CoreΓäó i9 Processors.csv  1100W AC Common Redundant Power Supply AXX1100PCRPS_ordering.csv  1100W AC Common Redundant Power Supply AXX1100PCRPS_spec.csv  11th Generation Intel┬« CoreΓäó i3 Processors.csv  11th Generation Intel┬« CoreΓäó i5 Processors.csv  11th Generation Intel┬« CoreΓäó i7 Processors.csv  11th Generation Intel┬« CoreΓäó i9 Processors.csv  128MB Mini DIMM Registered DDR2 for RAID Cache AXXMINIDIMM_spec.csv  12th Generation Intel┬« CoreΓäó i3 Processors.csv  12th Generation Intel┬« CoreΓäó i5 Processors.csv  12th Generation Intel┬« CoreΓäó i7 Processors.csv  12th Generation Intel┬« CoreΓäó i9 Processors.csv  1300W AC CRPS 80+ Titanium efficiency power supply module AXX1300TCRPS_ordering.csv  1300W AC CRPS 80+ Titanium efficiency power supply module AXX1300TCRPS_spec.csv  1394 cable and mounting kit accessory AUPM1394CBL_ordering.csv  1394 cable and mounting kit accessory AUPM1394CBL_spec.csv  13th Generation Intel┬« CoreΓäó i3 Processors.csv  13th Generation Intel┬« CoreΓäó i5 Processors.csv  13th Generation Intel┬« CoreΓäó i7 Processors.csv  13th Generation Intel┬« CoreΓäó i9 Processors.csv  1570W Power Supply AFC4UPWR_ordering.csv  1570W Power Supply AFC4UPWR_spec.csv  1600W AC Common Redundant Power Supply AXX1600TCRPS_ordering.csv  1600W AC Common Redundant Power Supply AXX1600TCRPS_spec.csv  16550 UART_spec.csv  1G - 2.5G - 5G - 10G Multi-Rate Ethernet PHY_spec.csv  1Gb-10Gb Ethernet PCS and PMA_spec.csv  1U 1Slot Riser 2 & 1Slot Riser 2 Interposer FCP1URISER2KIT_ordering.csv  (+6710 more)
cogniware-opea-ims/databases/: licenses.db  llms.db  test_db.db
cogniware-opea-ims/deployment/: Dockerfile.production  docker-compose.production.yml  kubernetes-deployment.yaml
cogniware-opea-ims/docs/: API_DOCUMENTATION.md  API_REFERENCE.md  COMPLETE_CAPABILITIES.md  COMPUTE_NODE_SCHEDULER_SYSTEM.md  CORE_INFERENCE_ENGINE.md  CUDA_STREAM_MANAGEMENT_SYSTEM.md  CUDA_VIRTUALIZATION_GUIDE.md  CUSTOMIZED_KERNEL_DRIVER.md  DOCUMENTATION_ORGANIZED.md  Doxyfile.in  FINAL_DELIVERY_REPORT.md  HARDWARE_CONFIGURATION.md  INDEX.md  INFERENCE_SHARING_SYSTEM.md  MCP_CORE_INTEGRATION.md  MEMORY_PARTITIONING_SYSTEM.md  MODEL_MANAGEMENT_SYSTEM.md  MULTIMODAL_PROCESSING_SYSTEM.md  MULTI_LLM_ORCHESTRATION_SYSTEM.md  NVLINK_OPTIMIZATION_SYSTEM.md  PARALLEL_LLM_EXECUTION_SYSTEM.md  PATENT_SPECIFICATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYTHON_CPP_BRIDGE_SYSTEM.md  TENSOR_CORE_OPTIMIZATION.md  VIRTUAL_COMPUTE_NODE_SYSTEM.md  api-documentation.html  optimization_usage.md  patentclaims.txt
cogniware-opea-ims/documents/: Cogniware.txt
cogniware-opea-ims/examples/: CMakeLists.txt  document_summarization_demo.cpp  document_summarization_demo.py  model_client_example.cpp  virtualization_example.cpp
cogniware-opea-ims/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
cogniware-opea-ims/include/: concurrency_controller.h  engine.h  fast_router_core.h  gpu_memory_manager.h  internal_types.h  llm_inference_core.h  llm_instance_manager.h  model_config_manager.h  model_loader.h  msmartcompute_api.h  resource_monitor.h  transformer_block.h
cogniware-opea-ims/misc/: init-db.sql  (+5 more)
(+6678 files in other folders)
