[tool.poetry]
name = "opea-edgar"
version = "0.1.0"
description = "Standalone GraphRAG example"
authors = ["Andreas Kollegger <akollegger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
neo4j = "^5.25.0"
langchain-openai = "^0.2.3"
googlemaps = "^4.10.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
