[tool.poetry]
name = "edgar-ui"
version = "0.1.0"
description = ""
authors = ["Andreas Kollegger <akollegger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "^1.39.0"
langserve = "^0.3.0"
fastapi = "^0.115.4"
httpx-sse = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
